--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Tech Work</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -34,7 +34,7 @@
   </head>
   <style>
     * {
-      font-family: "Roboto", sans-serif;
+      font-family: "Roboto", sans-serif !important;
     }
   </style>
   <body>
@@ -50,5 +50,19 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-8217RZMSCY"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-8217RZMSCY");
+    </script>
   </body>
 </html>
