remove unused css

--- a/public/index.html
+++ b/public/index.html
@@ -56,13 +56,18 @@
       src="https://www.googletagmanager.com/gtag/js?id=G-8217RZMSCY"
     ></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+      if (
+        location.hostname !== "localhost" &&
+        location.hostname !== "127.0.0.1"
+      ) {
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+          dataLayer.push(arguments);
+        }
+        gtag("js", new Date());
 
-      gtag("config", "G-8217RZMSCY");
+        gtag("config", "G-8217RZMSCY");
+      }
     </script>
   </body>
 </html>
